This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
3/29/18: Added name of STEM detector to image display if there is more than
one detector.

3/28/18: If a low dose map is used for anchor state, new anchor map will be
taken in low dose mode too, instead of just matching parameters (In 3.6).

3/28/18: Added ability to run a script after each acquisition in acquire at
items.

3/28/18: Added long operations for filling nitrogen or flashing FEG on
JEOL CryoARM.

3/28/18: Prevented standard focus from being set for montaging in LM when in
Low Dose mode.

3/28/18: When a view or search focus offset is being set while going across LM
boundary, it retains the focus across the boundary so offset can be set
correctly.

3/21/18: A few more tweaks in the CTF-based astigmatism/coma routine.

3/21/18: Added calibration of beam tilt needed to compensate image shift, made
multi-shot routine able to use this, added some related script commands and
options on image shift commands to do compensation for he image shift.

3/21/18: Switched Ctffind outout from showing defocus 1 and 2 to showing
average defocus and astigmatism (difference between the two).

3/21/18: Added ability to make a true JPEG file because ImageJ will not
display JPEG-compressed TIFFs and mad JPEG/JPG an allowed file type on the
SaveToOtherFile command.

3/18/18: Prevented right click in edit mode from moving map or polygon
(In 3.6).

3/17/18: Fixed color image inversion when zoomed down with antialiasing
(In 3.6).

3/1/18: Fixed coordinates in piece put into nav file for 2-piece case.

3/1/18: Added script commands for reporting current file number and last
measured astigmatism or beam tilt.

2/18/18 Added script command that behaves like Echo but evaluates arithmetic
expressions.

2/18/18: SEM_3-6-15